<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="StartButtonText">Start</string>
    <string name="StatisticButtonText">Statistics</string>
    <string name="Temperature">Temperature</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="StopButton">Stop</string>
    <string name="UserWeightText">Weight: </string>
    <string name="UserAgeText">Age: </string>
    <string name="WeightHint">Weight</string>
    <string name="AgeHint">Age</string>
    <string name="NameHint">Name</string>
    <string name="UserNameText">Name: </string>
    <string name="SaveButton">Save</string>
    <string name="ProfileButton">Profile</string>
    <string name="UsersText">User</string>
    <string name="userSelectedText">User selected:</string>
    <string name="CaloriesBurntText">Calories burnt: </string>
    <string name="ElapsedTimeText">Elapsed Time:</string>
    <string name="DistanceText">Distance</string>
    <string name="SpeedText">Speed: </string>
    <string name="CourseViewText">Course</string>
    <string name="totalDistanceText">Total distance: </string>
    <string name="totalTimeText">Total time</string>
    <string name="averageSpeedText">Average speed: </string>
    <string name="ratingText">Rate the run:</string>
    <string name="dateText">Date:</string>
    <string name="noteText">Note:</string>
    <string name="courseNameText">Course name:</string>
    <string name="coursesText">Courses:</string>
    <string name="sortBy">Sort by:</string>
    <string name="overAllStatistics">Overall statistics</string>
</resources>