<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="usermodel"
            type="com.example.cw3.viewmodels.AddUserVM" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserProfile">

    <LinearLayout
        android:id="@+id/input_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/name_layout"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/UserNameText"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:text="@string/UserNameText" />

                <EditText
                    android:id="@+id/UserName"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/NameHint"
                    android:inputType="textPersonName" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/age_layout"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:layout_marginStart="32dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/UserAgeText"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:text="@string/UserAgeText" />

                <EditText
                    android:id="@+id/UserAge"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/AgeHint"
                    android:inputType="number" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/weight_layout"
                android:layout_width="match_parent"
                android:layout_height="99dp"
                android:layout_marginStart="32dp"
                android:layout_marginEnd="32dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/UserWeightText"
                    android:layout_width="147dp"
                    android:layout_height="match_parent"
                    android:layout_marginTop="24dp"
                    android:text="@string/UserWeightText" />

                <EditText
                    android:id="@+id/UserWeight"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:ems="10"
                    android:hint="@string/WeightHint"
                    android:inputType="numberDecimal" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/SaveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/SaveButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_layout" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>