<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/ProfileButton"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/roundbutton"
        android:text="@string/ProfileButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StatisticButton" />

    <Button
        android:id="@+id/StatisticButton"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/roundbutton"
        android:text="@string/StatisticButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/StartButton" />

    <TextView
        android:id="@+id/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="100dp"
        android:text="@string/app_name"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/RunningLogo"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/StartButton"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginTop="100dp"
        android:background="@drawable/roundbutton"
        android:text="@string/StartButtonText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Title" />

    <TextView
        android:id="@+id/RunningLogo"
        android:layout_width="169dp"
        android:layout_height="170dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/running"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>