<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="viewmodel"
            type="com.example.cw3.viewmodels.CourseViewVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".Activities.CourseView">

        <androidx.fragment.app.FragmentContainerView
            android:id="@+id/maps"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/totalDistanceText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Note"
            app:layout_constraintVertical_bias="0.0"
            tools:context=".Activities.CourseView"
            tools:layout="@android:layout/simple_gallery_item" />

        <TextView
            android:id="@+id/CourseID"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/CourseViewText"
            android:textSize="34sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalDistanceText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/totalDistanceText"
            app:layout_constraintBottom_toTopOf="@+id/totalTimeText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/totalTimeText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/totalTimeText"
            app:layout_constraintBottom_toTopOf="@+id/averageSpeedText"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/dateText"
            android:layout_width="29dp"
            android:layout_height="19dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/dateText"
            app:layout_constraintBottom_toTopOf="@+id/Note"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/averageSpeedText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/averageSpeedText"
            app:layout_constraintBottom_toTopOf="@+id/ratingBar"
            app:layout_constraintStart_toStartOf="parent" />

        <RatingBar
            android:id="@+id/ratingBar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginBottom="16dp"
            android:rating="0"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/ratingText" />

        <TextView
            android:id="@+id/ratingText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginBottom="32dp"
            android:text="@string/ratingText"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@{viewmodel.date}"
            app:layout_constraintBottom_toTopOf="@+id/Note"
            app:layout_constraintStart_toEndOf="@+id/dateText"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/totalDistance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@{viewmodel.totalDistance}"
            app:layout_constraintBottom_toTopOf="@+id/totalTime"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/totalTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@{viewmodel.time}"
            app:layout_constraintBottom_toTopOf="@+id/averageSpeed"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/averageSpeed"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="8dp"
            android:text="@{viewmodel.averageSpeed}"
            app:layout_constraintBottom_toTopOf="@+id/ratingBar"
            app:layout_constraintEnd_toEndOf="parent" />

        <TextView
            android:id="@+id/noteText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="12dp"
            android:text="@string/noteText"
            app:layout_constraintBottom_toTopOf="@+id/maps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/CourseID" />

        <EditText
            android:id="@+id/Note"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/noteText"
            app:layout_constraintTop_toBottomOf="@+id/CourseID" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>